--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 tokio-tungstenite = { version= "*", features=["rustls-tls"] }
 url = "^2.0"
 
-tokio = { version = "1.12.0", features = ["full"] }
+tokio = { version = "1.12.0", features = ["full", "time"] }
 tokio-util = { version = "*", features = ["full"] }
 tokio-stream = { version = "*" }
 
